Đã hoàn thiện giao diện và chỉnh sửa hoàn thiện admin insert dữ liệu lên trang chủ

--- a/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_san_pham.xml
@@ -9,6 +9,7 @@
     android:gravity="center"
     android:weightSum="4"
     android:padding="10dp"
+    android:background="@drawable/background"
     >
 
     <ImageView
@@ -78,15 +79,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
+
             <TextView
-                android:fontFamily="@font/open_sans_bold"
-                android:layout_weight="1"
                 android:id="@+id/tv_tenSP"
-                android:textSize="35sp"
-                android:text="Tên sản phẩm"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                />
+                android:layout_weight="1"
+                android:textColor="@color/colortextChu"
+                android:fontFamily="@font/open_sans_bold"
+                android:text="Tên : Sách A"
+                android:textSize="30sp" />
+
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -142,7 +145,7 @@
                     android:id="@+id/tv_giaSP"
                     android:textStyle="bold"
                     android:textSize="27sp"
-                    android:textColor="#3F9785"
+                    android:textColor="@color/colortextChu"
                     android:text="Giá sản phẩm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -151,7 +154,7 @@
                     android:fontFamily="@font/open_sans_regular"
                     android:textStyle="bold"
                     android:textSize="27sp"
-                    android:textColor="#3F9785"
+                    android:textColor="@color/colortextChu"
                     android:text=" VNĐ"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -165,21 +168,16 @@
             android:layout_height="wrap_content"
             >
             <TextView
+                android:id="@+id/tv_motasp"
                 android:fontFamily="@font/open_sans_regular"
                 android:textSize="16sp"
                 android:text="Mô tả: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colortextChu"
+                android:textStyle="bold"
                 />
-            <TextView
-                android:fontFamily="@font/open_sans_regular"
-                android:layout_weight="3"
-                android:id="@+id/tv_motaSP"
-                android:textSize="16sp"
-                android:text="Mô tả"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                />
+
         </LinearLayout>
 
         <LinearLayout
@@ -191,10 +189,12 @@
                 android:fontFamily="@font/open_sans_regular"
                 android:layout_weight="1"
                 android:textSize="16sp"
-                android:text="Nguyên liệu: lựa chọn nguyên liệu tươi ngon, sạch sẽ có nguồn gốc rõ ràng được lựa chọn kĩ càng đảm bảo chất lương vệ sinh an toàn thực phẩm."
+                android:text="@string/vanBanGia"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:textStyle="bold"
                 />
+
         </LinearLayout>
 
     </LinearLayout>
@@ -215,12 +215,12 @@
             >
             <TextView
                 android:gravity="center"
-                android:background="@drawable/btn_qmk"
+                android:background="@drawable/btn_dn"
                 android:id="@+id/btn_themGioHang"
                 android:textSize="20sp"
                 android:padding="5dp"
                 android:fontFamily="@font/open_sans_bold"
-                android:textColor="#ffff"
+                android:textColor="@color/colortextChu"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:text="THÊM VÀO GIỎ HÀNG"
