--- a/app/src/main/res/layout/dialog_doi_thongtin.xml
+++ b/app/src/main/res/layout/dialog_doi_thongtin.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@color/athens_grey"
     >
 
     <ImageView
@@ -16,8 +17,8 @@
         android:layout_marginTop="10dp"
         android:text="CẬP NHẬT THÔNG TIN"
         android:textSize="22dp"
-        android:textColor="#3F51B5"
-        android:fontFamily="@font/open_sans_bold"
+        android:textColor="@color/colortextChu"
+        android:fontFamily="@font/fonttieudesemibold"
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,7 +36,7 @@
             android:layout_marginBottom="20dp"
             android:text="Username"
             android:textSize="18dp"
-            android:fontFamily="@font/open_sans_regular"
+            android:fontFamily="@font/fonttieudeextrabold"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -48,7 +49,7 @@
             android:layout_height="wrap_content"
             >
             <TextView
-                android:fontFamily="@font/open_sans_regular"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:text="Họ tên:"
                 android:textSize="17sp"
                 android:layout_width="80dp"
@@ -58,10 +59,11 @@
                 android:id="@+id/ed_hoten"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/btn_dn"
+                android:background="@drawable/edit_dn"
                 android:hint="Họ tên"
                 android:inputType="text"
                 android:padding="10dp"
+                android:drawableStart="@drawable/user30"
                 />
         </LinearLayout>
 
@@ -72,7 +74,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:fontFamily="@font/open_sans_regular"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:layout_width="80dp"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
@@ -83,10 +85,11 @@
                 android:id="@+id/ed_sdt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/btn_dn"
+                android:background="@drawable/edit_dn"
                 android:hint="Số điện thoại"
                 android:inputType="number"
                 android:padding="10dp"
+                android:drawableStart="@drawable/telephone"
                 />
         </LinearLayout>
 
@@ -99,7 +102,7 @@
             >
 
             <TextView
-                android:fontFamily="@font/open_sans_regular"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:text="Địa chỉ:"
@@ -109,10 +112,11 @@
                 android:id="@+id/ed_diachi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/btn_dn"
+                android:background="@drawable/edit_dn"
                 android:hint="Địa chỉ"
                 android:inputType="text"
                 android:padding="10dp"
+                android:drawableStart="@drawable/address"
                 />
         </LinearLayout>
 
@@ -130,11 +134,11 @@
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
-                android:background="@drawable/btn_qmk"
+                android:background="@drawable/btn_dn"
                 android:text="CẬP NHẬT"
-                android:fontFamily="@font/open_sans_bold"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:textSize="18sp"
-                android:textColor="#ffff" />
+                android:textColor="@color/colortextChu" />
 
             <TextView
                 android:layout_marginLeft="10dp"
@@ -143,11 +147,11 @@
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
-                android:background="@drawable/btn_qmk"
+                android:background="@drawable/btn_dn"
                 android:text="HỦY"
-                android:fontFamily="@font/open_sans_bold"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:textSize="18sp"
-                android:textColor="#ffff" />
+                android:textColor="@color/colortextChu" />
 
         </LinearLayout>
 
