--- a/app/src/main/res/drawable/btn_qmk.xml
+++ b/app/src/main/res/drawable/btn_qmk.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient
-        android:angle="180"
-        android:endColor="#FFAE37"
-        android:startColor="#FF5722" />
+    <solid android:color="#A6ACCD"
+        />
+    <stroke android:width="1dp"
+        android:color="@color/imaginary_mauve"
+        />
 
 </shape>
