--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,15 +2,17 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/dl_am"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     android:background="@drawable/backgroundinapp"
-    android:id="@+id/dl_am">
+    tools:context=".MainActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/tb_am"
             android:layout_width="match_parent"
@@ -18,30 +20,30 @@
 
 
         <FrameLayout
+            android:id="@+id/fcv_am"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:id="@+id/fcv_am"
-            />
+            android:layout_weight="1" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bnv_am"
             android:layout_width="match_parent"
             android:layout_height="73dp"
-            app:menu="@menu/nav_bottom"
+            android:layout_alignParentBottom="true"
             android:background="#74B1D1"
             app:itemIconTint="#C1CFE4"
             app:itemTextColor="#C1CFE4"
-            android:layout_alignParentBottom="true"/>
+            app:menu="@menu/nav_bottom" />
 
 
     </LinearLayout>
+
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nv_am"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/nav_header"
-        app:menu="@menu/drawer_view"/>
+        app:menu="@menu/drawer_view" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
