--- a/app/src/main/res/layout/activity_quen_mat_khau.xml
+++ b/app/src/main/res/layout/activity_quen_mat_khau.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".QuenMatKhau"
     android:gravity="center"
-    android:background="#74B2D2"
+    android:background="@drawable/background"
     android:orientation="vertical"
     >
 
@@ -19,10 +19,10 @@
         >
 
         <TextView
-            android:fontFamily="@font/open_sans_bold"
+            android:fontFamily="@font/fonttieudesemibold"
             android:layout_marginBottom="30dp"
-            android:textSize="23sp"
-            android:textColor="#FF5722"
+            android:textSize="30sp"
+            android:textColor="@color/colortextChu"
             android:text="QUÊN MẬT KHẨU"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -30,14 +30,14 @@
 
         <LinearLayout
             android:padding="5dp"
-            android:background="@drawable/btn_dn"
+            android:background="@drawable/edit_dn"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             >
             <ImageView
                 android:layout_marginLeft="18dp"
-                android:src="@drawable/users"
+                android:src="@drawable/name"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 />
@@ -57,7 +57,7 @@
         <LinearLayout
             android:layout_marginTop="10dp"
             android:padding="5dp"
-            android:background="@drawable/btn_dn"
+            android:background="@drawable/edit_dn"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -83,7 +83,7 @@
         <LinearLayout
             android:layout_marginTop="10dp"
             android:padding="5dp"
-            android:background="@drawable/btn_dn"
+            android:background="@drawable/edit_dn"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -105,7 +105,7 @@
                 android:hint="Nhập lại mật khẩu"
                 />
         </LinearLayout>
-
+<!--        Nút Thay Đổi-->
         <androidx.cardview.widget.CardView
             android:layout_marginTop="40dp"
             android:layout_width="match_parent"
@@ -124,6 +124,7 @@
                 android:layout_height="40dp"
                 />
         </androidx.cardview.widget.CardView>
+<!--        Nút Trở Về-->
         <androidx.cardview.widget.CardView
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
