--- a/app/src/main/res/layout/dialog_them_sanpham.xml
+++ b/app/src/main/res/layout/dialog_them_sanpham.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center"
+    android:background="@color/athens_grey"
     >
 
     <ImageView
@@ -17,8 +18,8 @@
         android:layout_marginTop="10dp"
         android:text="THÊM SẢN PHẨM"
         android:textSize="22dp"
-        android:textColor="#3F51B5"
-        android:fontFamily="@font/open_sans_bold"
+        android:textColor="@color/colortextChu"
+        android:fontFamily="@font/fonttieudeextrabold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
@@ -36,7 +37,8 @@
             android:layout_height="wrap_content"
             >
             <TextView
-                android:fontFamily="@font/open_sans_regular"
+                android:fontFamily="@font/fonttieudeextrabold"
+                android:textColor="@color/colortextChu"
                 android:text="Tên SP:"
                 android:textSize="16sp"
                 android:layout_width="90dp"
@@ -46,10 +48,11 @@
                 android:id="@+id/ed_tensp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/btn_dn"
+                android:background="@drawable/edit_dn"
                 android:hint="Tên sản phẩm"
                 android:inputType="text"
                 android:padding="10dp"
+                android:drawableStart="@drawable/book30"
                 />
         </LinearLayout>
 
@@ -60,18 +63,19 @@
             android:orientation="horizontal">
 
             <TextView
-                android:fontFamily="@font/open_sans_regular"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:layout_width="90dp"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:text="Loại SP:  "
+                android:textColor="@color/colortextChu"
                 android:textSize="16sp" />
 
             <Spinner
                 android:fontFamily="@font/open_sans_regular"
                 android:layout_weight="1"
                 android:paddingLeft="5dp"
-                android:background="@drawable/btn_dn"
+                android:background="@drawable/edit_dn"
                 android:id="@+id/spn_theloai"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
@@ -85,20 +89,22 @@
             android:layout_height="wrap_content"
             >
             <TextView
-                android:fontFamily="@font/open_sans_regular"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:text="Mô tả:"
                 android:textSize="16sp"
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colortextChu"
                 />
             <EditText
                 android:id="@+id/ed_motasp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/btn_dn"
+                android:background="@drawable/edit_dn"
                 android:hint="Mô tả sản phẩm"
                 android:inputType="text"
                 android:padding="10dp"
+                android:drawableStart="@drawable/mess30"
                 />
         </LinearLayout>
 
@@ -109,20 +115,23 @@
             android:layout_height="wrap_content"
             >
             <TextView
-                android:fontFamily="@font/open_sans_regular"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:text="Giá thành:"
                 android:textSize="16sp"
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
+                android:textColor="@color/colortextChu"
                 />
             <EditText
                 android:id="@+id/ed_giasp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/btn_dn"
+                android:background="@drawable/edit_dn"
                 android:hint="Giá sản phẩm"
                 android:inputType="number"
                 android:padding="10dp"
+                android:drawableStart="@drawable/price30"
+
                 />
         </LinearLayout>
 
@@ -132,11 +141,12 @@
             >
 
             <TextView
-                android:fontFamily="@font/open_sans_regular"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:text="Ảnh SP:"
+                android:textColor="@color/colortextChu"
                 />
 
             <ImageView
@@ -190,9 +200,9 @@
                 android:layout_weight="1"
                 android:background="@drawable/btn_qmk"
                 android:text="THÊM"
-                android:fontFamily="@font/open_sans_bold"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:textSize="18sp"
-                android:textColor="#ffff" />
+                android:textColor="@color/colortextChu" />
 
             <TextView
                 android:layout_marginLeft="10dp"
@@ -205,7 +215,7 @@
                 android:text="HỦY"
                 android:fontFamily="@font/open_sans_bold"
                 android:textSize="18sp"
-                android:textColor="#ffff" />
+                android:textColor="@color/colortextChu" />
 
         </LinearLayout>
 
