--- a/app/src/main/res/layout/item_giohang.xml
+++ b/app/src/main/res/layout/item_giohang.xml
@@ -1,76 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="horizontal"
-    android:backgroundTint="@color/athens_grey"
-    app:cardElevation="3dp"
     android:layout_margin="5dp"
-    app:cardPreventCornerOverlap="true"
-    >
+    android:backgroundTint="@color/ethereal_blue"
+    android:orientation="horizontal"
+    app:cardElevation="3dp"
+    app:cardPreventCornerOverlap="true">
 
     <LinearLayout
-        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:layout_margin="10dp">
 
         <ImageView
-            android:scaleType="centerCrop"
             android:id="@+id/img_anhsp"
-            android:src="@mipmap/ic_launcher"
             android:layout_width="90dp"
             android:layout_height="100dp"
-            />
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_launcher" />
 
         <LinearLayout
-            android:textSize="13sp"
-            android:fontFamily="@font/open_sans_regular"
-            android:layout_marginLeft="10dp"
-            android:orientation="vertical"
-            android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            >
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:fontFamily="@font/open_sans_regular"
+            android:orientation="vertical"
+            android:textSize="13sp">
+
             <TextView
                 android:id="@+id/tv_tensp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:text="Tên sản phẩm"
-                android:fontFamily="@font/open_sans_bold"
-                android:textSize="17dp"
-                />
+                android:textColor="@color/colortextChu"
+                android:textSize="17dp" />
 
             <TextView
-                android:fontFamily="@font/open_sans_regular"
                 android:id="@+id/tv_soluong"
-                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/fonttieuderegular"
                 android:text="1"
                 android:textSize="20dp"
-                />
+                android:textStyle="bold" />
 
             <TextView
-                android:fontFamily="@font/open_sans_regular"
-                android:textColor="#4CAF50"
                 android:id="@+id/tv_giasp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:text="Giá tiền"
-                android:textStyle="bold"
+                android:textColor="@color/colortextChu"
                 android:textSize="15dp"
-                />
+                android:textStyle="bold" />
         </LinearLayout>
 
         <ImageView
-            android:layout_gravity="center"
-            android:src="@drawable/logo_delete_2"
             android:id="@+id/img_delete"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            />
+            android:layout_gravity="center"
+            android:src="@drawable/ic_delete" />
 
     </LinearLayout>
 
