--- a/app/src/main/res/layout/item_hoadon.xml
+++ b/app/src/main/res/layout/item_hoadon.xml
@@ -1,166 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
-    android:backgroundTint="#FDF1FF"
+    android:backgroundTint="@color/ethereal_blue"
     app:cardElevation="3dp"
-    app:cardPreventCornerOverlap="true"
-    >
+    app:cardPreventCornerOverlap="true">
 
     <LinearLayout
-        android:gravity="center"
-        android:layout_margin="10dp"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <ImageView
-            android:layout_marginLeft="5dp"
-            android:src="@drawable/anh_hoadon"
-            android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="100dp"
-            />
+            android:layout_marginLeft="5dp"
+            android:layout_weight="1"
+            android:src="@drawable/anh_hoadon" />
 
         <LinearLayout
-            android:layout_marginLeft="10dp"
-            android:layout_weight="5"
-            android:orientation="vertical"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            >
+            android:layout_marginLeft="10dp"
+            android:layout_weight="5"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:weightSum="2"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
+                android:orientation="horizontal"
+                android:weightSum="2">
 
                 <TextView
-                    android:fontFamily="@font/open_sans_regular"
-                    android:text="Mã hóa đơn"
-                    android:textStyle="bold"
-                    android:textSize="13sp"
                     android:id="@+id/tv_mahd"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    />
+                    android:layout_weight="1"
+                    android:fontFamily="@font/open_sans_regular"
+                    android:text="Mã hóa đơn"
+                    android:textSize="13sp"
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:textStyle="italic"
-                    android:textSize="13sp"
-                    android:fontFamily="@font/open_sans_regular"
-                    android:text="Ngày mua"
                     android:id="@+id/tv_ngaylap"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    />
+                    android:layout_weight="1"
+                    android:fontFamily="@font/fonttieudeextrabold"
+                    android:text="Ngày mua"
+                    android:textColor="@color/colortextChu"
+                    android:textSize="13sp" />
 
             </LinearLayout>
 
             <TextView
-                android:textSize="15sp"
-                android:fontFamily="@font/open_sans_bold"
-                android:text="Tổng sản phẩm"
                 android:id="@+id/tv_tongsanpham"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                />
+                android:fontFamily="@font/open_sans_bold"
+                android:text="Tổng sản phẩm"
+                android:textSize="15sp" />
 
             <TextView
-                android:textSize="13sp"
-                android:fontFamily="@font/open_sans_regular"
-                android:text="Mã tài khoản"
                 android:id="@+id/tv_matk"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
+                android:fontFamily="@font/fonttieudeextrabold"
+                android:text="Mã tài khoản"
+                android:textColor="@color/colortextChu"
+                android:textSize="13sp" />
 
             <TextView
-                android:textSize="13sp"
-                android:fontFamily="@font/open_sans_regular"
-                android:text="Họ tên"
                 android:id="@+id/tv_hoten"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
+                android:fontFamily="@font/fonttieudeextrabold"
+                android:text="Họ tên"
+                android:textColor="@color/colortextChu"
+                android:textSize="13sp" />
 
             <TextView
-                android:textSize="13sp"
-                android:fontFamily="@font/open_sans_regular"
-                android:text="Số điện thoại"
                 android:id="@+id/tv_sdt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
+                android:fontFamily="@font/fonttieudeextrabold"
+                android:text="Số điện thoại"
+                android:textColor="@color/colortextChu"
+                android:textSize="13sp" />
 
             <TextView
-                android:textSize="13sp"
-                android:fontFamily="@font/open_sans_regular"
-                android:text="Địa chỉ"
                 android:id="@+id/tv_diachi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
+                android:fontFamily="@font/fonttieudeextrabold"
+                android:text="Địa chỉ"
+                android:textColor="@color/colortextChu"
+                android:textSize="13sp" />
 
             <TextView
-                android:textSize="13sp"
-                android:fontFamily="@font/open_sans_regular"
-                android:textStyle="bold"
-                android:text="Tổng tiền"
                 android:id="@+id/tv_tongtien"
-                android:textColor="#FF0000"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
+                android:fontFamily="@font/fonttieudeextrabold"
+                android:text="Tổng tiền"
+                android:textColor="@color/colortextChu"
+                android:textSize="13sp"
+                android:textStyle="bold" />
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
+                android:orientation="horizontal">
+
                 <TextView
-                    android:textSize="13sp"
-                    android:fontFamily="@font/open_sans_regular"
-                    android:layout_weight="1"
-                    android:text="Trạng thái"
                     android:id="@+id/tv_trangthai"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    />
+                    android:layout_weight="1"
+                    android:fontFamily="@font/fonttieudeextrabold"
+                    android:text="Trạng thái"
+                    android:textColor="@color/colortextChu"
+                    android:textSize="13sp" />
+
                 <TextView
-                    android:gravity="center"
-                    android:fontFamily="@font/open_sans_bold"
-                    android:padding="3dp"
-                    android:textColor="#FFFFFF"
-                    android:background="@drawable/btn_qmk"
                     android:id="@+id/btn_doiTT"
-                    android:text="THAY ĐỔI"
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
-                    />
+                    android:background="@drawable/btn_qmk"
+                    android:fontFamily="@font/fonttieuderegular"
+                    android:gravity="center"
+                    android:padding="3dp"
+                    android:text="THAY ĐỔI"
+                    android:textColor="@color/colortextChu" />
             </LinearLayout>
 
         </LinearLayout>
 
         <LinearLayout
-            android:gravity="center"
-            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            >
+            android:gravity="center"
+            android:orientation="vertical">
+
             <ImageView
                 android:id="@+id/img_xoa"
-                android:src="@drawable/logo_delete_2"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                />
+                android:src="@drawable/ic_delete" />
         </LinearLayout>
 
     </LinearLayout>
