--- a/app/src/main/res/layout/item_sanpham.xml
+++ b/app/src/main/res/layout/item_sanpham.xml
@@ -1,97 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="5dp"
+    android:backgroundTint="@color/ethereal_blue"
     android:orientation="horizontal"
     app:cardElevation="3dp"
-    android:layout_margin="5dp"
-    android:backgroundTint="@color/athens_grey"
-    app:cardPreventCornerOverlap="true"
-    >
+    app:cardPreventCornerOverlap="true">
 
     <LinearLayout
-        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        android:layout_margin="10dp">
 
         <ImageView
-            android:scaleType="centerCrop"
-            android:layout_gravity="center"
             android:id="@+id/img_anhsp"
-            android:src="@mipmap/ic_launcher"
             android:layout_width="100dp"
             android:layout_height="80dp"
-            />
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_launcher" />
 
         <LinearLayout
-            android:gravity="center"
-            android:layout_marginLeft="10dp"
-            android:orientation="vertical"
-            android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            >
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
             <TextView
-                android:textStyle="bold"
-                android:fontFamily="@font/open_sans_regular"
-                android:textSize="13sp"
                 android:id="@+id/tv_masp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/open_sans_regular"
                 android:text="Mã sản phẩm"
-                />
+                android:textSize="13sp"
+                android:textStyle="bold" />
 
             <TextView
-                android:fontFamily="@font/open_sans_bold"
-                android:textSize="15sp"
                 android:id="@+id/tv_tensp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:text="Tên sản phẩm"
-                />
+                android:textColor="@color/colortextChu"
+                android:textSize="15sp" />
 
             <TextView
-                android:fontFamily="@font/open_sans_regular"
-                android:textSize="13sp"
                 android:id="@+id/tv_loaisp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:text="Thể loại"
-                />
+                android:textColor="@color/colortextChu"
+                android:textSize="13sp" />
 
             <TextView
-                android:fontFamily="@font/open_sans_regular"
-                android:textSize="13sp"
                 android:id="@+id/tv_motasp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:text="Mô tả"
-                />
+                android:textColor="@color/colortextChu"
+                android:textSize="13sp" />
+
             <TextView
-                android:fontFamily="@font/open_sans_regular"
-                android:textSize="13sp"
-                android:textColor="#FF0000"
                 android:id="@+id/tv_giasp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/fonttieudeextrabold"
                 android:text="Giá tiền"
-                android:textStyle="bold"
-                />
+                android:textColor="@color/colortextChu"
+                android:textSize="13sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            >
+            android:orientation="vertical">
+
             <ImageView
                 android:id="@+id/img_chucnang"
-                android:src="@drawable/ic_more"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                />
+                android:src="@drawable/ic_more" />
         </LinearLayout>
 
     </LinearLayout>
