--- a/app/src/main/res/layout/item_taikhoan.xml
+++ b/app/src/main/res/layout/item_taikhoan.xml
@@ -1,124 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
-    android:backgroundTint="#CCFFF6F6"
-    app:cardElevation="3dp"
-    app:cardPreventCornerOverlap="true"
-    >
+    android:backgroundTint="@color/ethereal_blue"
+    app:cardElevation="5dp"
+    app:cardPreventCornerOverlap="true">
 
     <LinearLayout
-        android:layout_margin="10dp"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:layout_margin="10dp"
+        android:orientation="horizontal">
 
         <ImageView
-            android:layout_gravity="center"
-            android:src="@drawable/account"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="100dp"
-            />
+            android:layout_gravity="center"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:src="@drawable/account" />
 
         <LinearLayout
-            android:layout_weight="5"
-            android:orientation="vertical"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            >
+            android:layout_weight="5"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
+                android:orientation="horizontal">
 
                 <TextView
-                    android:textStyle="bold"
-                    android:textSize="13sp"
-                    android:fontFamily="@font/open_sans_regular"
-                    android:text="Mã tài khoản"
                     android:id="@+id/tv_matk"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    />
+                    android:layout_weight="1"
+                    android:fontFamily="@font/open_sans_regular"
+                    android:text="Mã tài khoản"
+                    android:textColor="@color/colortextChu"
+                    android:textSize="13sp"
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:layout_marginRight="20dp"
-                    android:textStyle="italic"
-                    android:fontFamily="@font/open_sans_regular"
                     android:id="@+id/tv_loaitaikhoan"
-                    android:text="loại tài khoản"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="20dp"
+                    android:fontFamily="@font/fonttieuderegular"
+                    android:text="Loại tài khoản"
+                    android:textColor="@color/colortextChu"
+
                     />
 
             </LinearLayout>
 
             <TextView
-                android:textSize="15sp"
-                android:fontFamily="@font/open_sans_bold"
-                android:text="Họ tên"
                 android:id="@+id/tv_hoten"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
+                android:fontFamily="@font/fonttieudeextrabold"
+                android:text="Họ tên"
+                android:textColor="@color/colortextChu"
+                android:textSize="15sp" />
 
             <TextView
-                android:textSize="13sp"
-                android:fontFamily="@font/open_sans_regular"
-                android:text="Tài khoản"
                 android:id="@+id/tv_taikhoan"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
+                android:fontFamily="@font/fonttieudeextrabold"
+                android:text="Tài khoản"
+                android:textColor="@color/colortextChu"
+                android:textSize="13sp" />
 
             <TextView
-                android:textSize="13sp"
-                android:fontFamily="@font/open_sans_regular"
                 android:id="@+id/tv_matkhau"
-                android:text="Mật khẩu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
+                android:fontFamily="@font/fonttieudeextrabold"
+                android:text="Mật khẩu"
+                android:textColor="@color/colortextChu"
+                android:textSize="13sp" />
 
             <TextView
-                android:textSize="13sp"
-                android:fontFamily="@font/open_sans_regular"
-                android:text="Số điện thoại"
                 android:id="@+id/tv_sdt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
+                android:fontFamily="@font/fonttieudeextrabold"
+                android:text="Số điện thoại"
+                android:textColor="@color/colortextChu"
+                android:textSize="13sp" />
 
             <TextView
-                android:textSize="13sp"
-                android:fontFamily="@font/open_sans_regular"
-                android:text="Địa chỉ"
                 android:id="@+id/tv_diachi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
+                android:fontFamily="@font/fonttieudeextrabold"
+                android:text="Địa chỉ"
+                android:textColor="@color/colortextChu"
+                android:textSize="13sp" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            >
+            android:orientation="vertical">
+
             <ImageView
                 android:id="@+id/img_chucnang"
-                android:src="@drawable/ic_more"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                />
+                android:src="@drawable/ic_more" />
         </LinearLayout>
 
     </LinearLayout>
