--- a/app/src/main/res/layout/item_theloai.xml
+++ b/app/src/main/res/layout/item_theloai.xml
@@ -1,76 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:backgroundTint="#CCFFF6F6"
-    app:cardElevation="1dp"
     android:layout_margin="5dp"
+    android:backgroundTint="@color/ethereal_blue"
+    app:cardElevation="1dp"
+
     >
 
     <LinearLayout
-        android:layout_margin="10dp"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:layout_margin="10dp"
+        android:orientation="horizontal">
 
         <ImageView
-            android:src="@drawable/book"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            />
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:src="@drawable/book" />
 
         <LinearLayout
-            android:layout_weight="5"
-            android:orientation="vertical"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            >
+            android:layout_weight="5"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
-
+                android:orientation="horizontal">
+                <!--            Mã Loại-->
                 <TextView
-                    android:textStyle="bold"
-                    android:text="Mã loại"
-                    android:textSize="15sp"
-                    android:fontFamily="@font/open_sans_regular"
                     android:id="@+id/tv_maloai"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    />
+                    android:layout_weight="1"
+                    android:fontFamily="@font/open_sans_regular"
+                    android:text="Mã loại"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
-
+            <!--            Tên Loại-->
             <TextView
-                android:fontFamily="@font/open_sans_regular"
-                android:text="Tên loại"
-                android:textSize="15sp"
                 android:id="@+id/tv_tenloai"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                />
+                android:fontFamily="@font/fonttieudeextrabold"
+
+                android:text="Tên loại"
+                android:textSize="15sp" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            >
+            android:orientation="vertical">
+
             <ImageView
                 android:id="@+id/img_chucnang"
-                android:src="@drawable/ic_more"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                />
+                android:src="@drawable/ic_more" />
         </LinearLayout>
 
     </LinearLayout>
