Chỉnh sửa lại item bottom navigation và thêm thành công fragment_quan_ly_the_loai.xml đã add dữ liệu thành công

--- a/app/src/main/res/layout/item_hoadon.xml
+++ b/app/src/main/res/layout/item_hoadon.xml
@@ -134,7 +134,7 @@
                     android:fontFamily="@font/fonttieuderegular"
                     android:gravity="center"
                     android:padding="3dp"
-                    android:text="THAY ĐỔI"
+                    android:text="Xác Nhận"
                     android:textColor="@color/colortextChu" />
             </LinearLayout>
 
