--- a/app/src/main/res/layout/fragment_cuahang.xml
+++ b/app/src/main/res/layout/fragment_cuahang.xml
@@ -189,9 +189,12 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/open_sans_regular"
-                            android:text="Thiếu nhi"
-                            android:textSize="13sp" />
+                            android:fontFamily="@font/fonttieuderegular"
+                            android:text="Giáo Khoa"
+                            android:textSize="13sp"
+                            android:textStyle="bold"
+                            android:textColor="@color/colortextChu"
+                            />
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
