--- a/app/src/main/res/menu/nav_bottom.xml
+++ b/app/src/main/res/menu/nav_bottom.xml
@@ -7,7 +7,7 @@
     <item
         android:id="@+id/bt_giohang"
         android:title="Giỏ hàng"
-        android:icon="@drawable/rank1"/>
+        android:icon="@drawable/cart50"/>
     <item
         android:id="@+id/bt_hoadon"
         android:title="Hoá đơn"
